--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 
 <div class="container">
-  <h3 id="wells" class="page-header">Featured Packages</h3>
+  <h3 id="wells" class="page-header">Top Packages</h3>
 </div>
 
 <div class="container">
